xds/dubbo-go-istio/server/manifest/virtual-service.yaml
#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: pixiu-gateway
spec:
  selector:
    app.kubernetes.io/name: pixiu-gateway
  servers:
    - port:
        number: 8888
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dubbo-go-app-vs
spec:
  hosts:
    - "dubbo-go-app"
  tcp:
    - route:
        - destination:
            host: dubbo-go-app.default.svc.cluster.local
            port:
              number: 20002
